# gcp-classic-template-dataflow

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline-template-dataflow  pipeline-template-dataflow.yaml
classic_template/: .env  exemplo.env  pipe_voos_to_bigquery.py
classic_templates/template_voos/: build_template_voos.sh  pipe_voos_to_bigquery.py  pipe_voos_to_bigquery_metadata.json
docs/: index.md
flex_templates/template_docker_personalizado/: Dockerfile  build_flex_template.sh  build_image.sh  main.py  requirements.txt
flex_templates/template_voos_atrasados/: build_flex_template.sh  metadata.json
scripts/: build_template_voos.sh  config_docker.sh  create_bucket.sh  create_repos_artifact_registry.sh
setup_env/: build_template.sh  deploy_job.sh
