[tool.poetry]
name = "gcp-classic-template-dataflow"
version = "0.1.0"
description = ""
authors = ["marcus-moura <marcuspaulo.moura@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apache-beam = {extras = ["gcp"], version = "^2.54.0"}
taskipy = "^1.12.2"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"